@@ -1,6 +1,6 @@
+package com.portafolio.copetti.Security.Entity;
 
-package Security.Entity;
-
+import static com.sun.tools.javac.util.List.collector;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -8,13 +8,18 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+/**
+ *
+ * @author octac
+ */
 public class UsuarioPrincipal implements UserDetails {
+
     private String nombre;
     private String nombreUsuario;
     private String email;
     private String password;
-    private Collection <? extends GrantedAuthority> authorities;
-    
+    private Collection<? extends GrantedAuthority> authorities;
+
     //Constructor
     public UsuarioPrincipal(String nombre, String nombreUsuario, String email, String password, Collection<? extends GrantedAuthority> authorities) {
         this.nombre = nombre;
@@ -23,12 +28,13 @@ public class UsuarioPrincipal implements UserDetails {
         this.password = password;
         this.authorities = authorities;
     }
-public static UsuarioPrincipal build(Usuario usuario) {
+
+    public static UsuarioPrincipal build(Usuario usuario) {
         List<GrantedAuthority> authorities = usuario.getRoles().stream()
-                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors
-                .toList());
-        return new UsuarioPrincipal(usuario.getNombre(), usuario.getNombreUsuario(), usuario.getEmail(),
-                 usuario.getPassword(), authorities);
+                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors.toList());
+
+        return new UsuarioPrincipal(usuario.getNombre(), usuario.getNombreUsuario(), usuario.getEmail(), usuario.getPassword(), authorities);
+
     }
 
     @Override
@@ -73,8 +79,4 @@ public static UsuarioPrincipal build(Usuario usuario) {
     public boolean isEnabled() {
         return true;
     }
-
 }
-
- 
-
